# internal/proto/openapi.json
@@ -52,7 +52,7 @@
             "content": {
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/yoshino_s.soar_helper.v1.QueryResponse"
+                  "$ref": "#/components/schemas/entpb.Icp"
                 }
               }
             }
@@ -176,13 +176,13 @@
         }
       }
     },
-    "/yoshino_s.soar_helper.v1.RunnerService/Run": {
+    "/yoshino_s.soar_helper.v1.RunnerService/RunWithoutStream": {
       "post": {
         "tags": [
           "yoshino_s.soar_helper.v1.RunnerService"
         ],
-        "summary": "Run",
-        "operationId": "yoshino_s.soar_helper.v1.RunnerService.Run",
+        "summary": "RunWithoutStream",
+        "operationId": "yoshino_s.soar_helper.v1.RunnerService.RunWithoutStream",
         "parameters": [
           {
             "name": "Connect-Protocol-Version",
@@ -414,14 +414,78 @@
   },
   "components": {
     "schemas": {
-      "google.protobuf.Empty": {
+      "entpb.Icp": {
         "type": "object",
-        "description": "A generic empty message that you can re-use to avoid defining duplicated\n empty messages in your APIs. A typical example is to use it as the request\n or the response type of an API method. For instance:\n\n     service Foo {\n       rpc Bar(google.protobuf.Empty) returns (google.protobuf.Empty);\n     }"
+        "properties": {
+          "id": {
+            "type": "integer",
+            "title": "id",
+            "format": "int32"
+          },
+          "host": {
+            "type": "string",
+            "title": "host"
+          },
+          "city": {
+            "title": "city",
+            "$ref": "#/components/schemas/google.protobuf.StringValue"
+          },
+          "province": {
+            "title": "province",
+            "$ref": "#/components/schemas/google.protobuf.StringValue"
+          },
+          "company": {
+            "title": "company",
+            "$ref": "#/components/schemas/google.protobuf.StringValue"
+          },
+          "owner": {
+            "title": "owner",
+            "$ref": "#/components/schemas/google.protobuf.StringValue"
+          },
+          "type": {
+            "type": "string",
+            "title": "type"
+          },
+          "homepage": {
+            "title": "homepage",
+            "$ref": "#/components/schemas/google.protobuf.StringValue"
+          },
+          "permit": {
+            "title": "permit",
+            "$ref": "#/components/schemas/google.protobuf.StringValue"
+          },
+          "webName": {
+            "title": "webName",
+            "$ref": "#/components/schemas/google.protobuf.StringValue"
+          },
+          "createdAt": {
+            "title": "created_at",
+            "$ref": "#/components/schemas/google.protobuf.Timestamp"
+          },
+          "updatedAt": {
+            "title": "updated_at",
+            "$ref": "#/components/schemas/google.protobuf.Timestamp"
+          }
+        },
+        "title": "Icp",
+        "additionalProperties": false
+      },
+      "google.protobuf.StringValue": {
+        "type": "string",
+        "description": "Wrapper message for `string`.\n\n The JSON representation for `StringValue` is JSON string."
       },
       "google.protobuf.Timestamp": {
         "type": "string",
+        "examples": [
+          "1s",
+          "1.000340012s"
+        ],
         "format": "date-time",
         "description": "A Timestamp represents a point in time independent of any time zone or local\n calendar, encoded as a count of seconds and fractions of seconds at\n nanosecond resolution. The count is relative to an epoch at UTC midnight on\n January 1, 1970, in the proleptic Gregorian calendar which extends the\n Gregorian calendar backwards to year one.\n\n All minutes are 60 seconds long. Leap seconds are \"smeared\" so that no leap\n second table is needed for interpretation, using a [24-hour linear\n smear](https://developers.google.com/time/smear).\n\n The range is from 0001-01-01T00:00:00Z to 9999-12-31T23:59:59.999999999Z. By\n restricting to that range, we ensure that we can convert to and from [RFC\n 3339](https://www.ietf.org/rfc/rfc3339.txt) date strings.\n\n # Examples\n\n Example 1: Compute Timestamp from POSIX `time()`.\n\n     Timestamp timestamp;\n     timestamp.set_seconds(time(NULL));\n     timestamp.set_nanos(0);\n\n Example 2: Compute Timestamp from POSIX `gettimeofday()`.\n\n     struct timeval tv;\n     gettimeofday(\u0026tv, NULL);\n\n     Timestamp timestamp;\n     timestamp.set_seconds(tv.tv_sec);\n     timestamp.set_nanos(tv.tv_usec * 1000);\n\n Example 3: Compute Timestamp from Win32 `GetSystemTimeAsFileTime()`.\n\n     FILETIME ft;\n     GetSystemTimeAsFileTime(\u0026ft);\n     UINT64 ticks = (((UINT64)ft.dwHighDateTime) \u003c\u003c 32) | ft.dwLowDateTime;\n\n     // A Windows tick is 100 nanoseconds. Windows epoch 1601-01-01T00:00:00Z\n     // is 11644473600 seconds before Unix epoch 1970-01-01T00:00:00Z.\n     Timestamp timestamp;\n     timestamp.set_seconds((INT64) ((ticks / 10000000) - 11644473600LL));\n     timestamp.set_nanos((INT32) ((ticks % 10000000) * 100));\n\n Example 4: Compute Timestamp from Java `System.currentTimeMillis()`.\n\n     long millis = System.currentTimeMillis();\n\n     Timestamp timestamp = Timestamp.newBuilder().setSeconds(millis / 1000)\n         .setNanos((int) ((millis % 1000) * 1000000)).build();\n\n Example 5: Compute Timestamp from Java `Instant.now()`.\n\n     Instant now = Instant.now();\n\n     Timestamp timestamp =\n         Timestamp.newBuilder().setSeconds(now.getEpochSecond())\n             .setNanos(now.getNano()).build();\n\n Example 6: Compute Timestamp from current time in Python.\n\n     timestamp = Timestamp()\n     timestamp.GetCurrentTime()\n\n # JSON Mapping\n\n In JSON format, the Timestamp type is encoded as a string in the\n [RFC 3339](https://www.ietf.org/rfc/rfc3339.txt) format. That is, the\n format is \"{year}-{month}-{day}T{hour}:{min}:{sec}[.{frac_sec}]Z\"\n where {year} is always expressed using four digits while {month}, {day},\n {hour}, {min}, and {sec} are zero-padded to two digits each. The fractional\n seconds, which can go up to 9 digits (i.e. up to 1 nanosecond resolution),\n are optional. The \"Z\" suffix indicates the timezone (\"UTC\"); the timezone\n is required. A proto3 JSON serializer should always use UTC (as indicated by\n \"Z\") when printing the Timestamp type and a proto3 JSON parser should be\n able to accept both UTC and other timezones (as indicated by an offset).\n\n For example, \"2017-01-15T01:30:15.01Z\" encodes 15.01 seconds past\n 01:30 UTC on January 15, 2017.\n\n In JavaScript, one can convert a Date object to this format using the\n standard\n [toISOString()](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Date/toISOString)\n method. In Python, a standard `datetime.datetime` object can be converted\n to this format using\n [`strftime`](https://docs.python.org/2/library/time.html#time.strftime) with\n the time format spec '%Y-%m-%dT%H:%M:%S.%fZ'. Likewise, in Java, one can use\n the Joda Time's [`ISODateTimeFormat.dateTime()`](\n http://joda-time.sourceforge.net/apidocs/org/joda/time/format/ISODateTimeFormat.html#dateTime()\n ) to obtain a formatter capable of generating timestamps in this format."
+      },
+      "google.protobuf.Empty": {
+        "type": "object",
+        "description": "A generic empty message that you can re-use to avoid defining duplicated\n empty messages in your APIs. A typical example is to use it as the request\n or the response type of an API method. For instance:\n\n     service Foo {\n       rpc Bar(google.protobuf.Empty) returns (google.protobuf.Empty);\n     }"
       },
       "yoshino_s.soar_helper.v1.BatchQueryRequest": {
         "type": "object",
@@ -444,12 +508,12 @@
       "yoshino_s.soar_helper.v1.BatchQueryResponse": {
         "type": "object",
         "properties": {
-          "data": {
+          "items": {
             "type": "array",
             "items": {
-              "$ref": "#/components/schemas/yoshino_s.soar_helper.v1.IcpRecord"
+              "$ref": "#/components/schemas/entpb.Icp"
             },
-            "title": "data"
+            "title": "items"
           },
           "errors": {
             "type": "object",
@@ -478,81 +542,6 @@
         "title": "ErrorsEntry",
         "additionalProperties": false
       },
-      "yoshino_s.soar_helper.v1.IcpRecord": {
-        "type": "object",
-        "properties": {
-          "id": {
-            "type": [
-              "integer",
-              "string"
-            ],
-            "title": "id",
-            "format": "int64"
-          },
-          "host": {
-            "type": "string",
-            "title": "host"
-          },
-          "city": {
-            "type": "string",
-            "title": "city"
-          },
-          "province": {
-            "type": "string",
-            "title": "province"
-          },
-          "company": {
-            "type": "string",
-            "title": "company"
-          },
-          "owner": {
-            "type": "string",
-            "title": "owner"
-          },
-          "type": {
-            "type": "string",
-            "title": "type"
-          },
-          "homepage": {
-            "type": "string",
-            "title": "homepage"
-          },
-          "permit": {
-            "type": "string",
-            "title": "permit"
-          },
-          "createdAt": {
-            "allOf": [
-              {
-                "$ref": "#/components/schemas/google.protobuf.Timestamp"
-              }
-            ],
-            "title": "created_at"
-          },
-          "updatedAt": {
-            "allOf": [
-              {
-                "$ref": "#/components/schemas/google.protobuf.Timestamp"
-              }
-            ],
-            "title": "updated_at"
-          },
-          "cached": {
-            "type": "boolean",
-            "title": "cached"
-          },
-          "input": {
-            "type": "string",
-            "title": "input"
-          },
-          "webName": {
-            "type": "string",
-            "title": "web_name"
-          }
-        },
-        "title": "IcpRecord",
-        "additionalProperties": false
-      },
       "yoshino_s.soar_helper.v1.QueryRequest": {
         "type": "object",
         "properties": {
@@ -566,21 +555,6 @@
           }
         },
         "title": "QueryRequest",
-        "additionalProperties": false
-      },
-      "yoshino_s.soar_helper.v1.QueryResponse": {
-        "type": "object",
-        "properties": {
-          "data": {
-            "allOf": [
-              {
-                "$ref": "#/components/schemas/yoshino_s.soar_helper.v1.IcpRecord"
-              }
-            ],
-            "title": "data"
-          }
-        },
-        "title": "QueryResponse",
         "additionalProperties": false
       },
       "yoshino_s.soar_helper.v1.StatisticResponse": {
@@ -618,24 +592,25 @@
           "code": {
             "type": "string",
             "examples": [
-              "CodeNotFound"
+              "not_found"
             ],
             "enum": [
-              "CodeCanceled",
-              "CodeUnknown",
-              "CodeInvalidArgument",
-              "CodeDeadlineExceeded",
-              "CodeNotFound",
-              "CodeAlreadyExists",
-              "CodePermissionDenied",
-              "CodeResourceExhausted",
-              "CodeFailedPrecondition",
-              "CodeAborted",
-              "CodeOutOfRange",
-              "CodeInternal",
-              "CodeUnavailable",
-              "CodeDataLoss",
-              "CodeUnauthenticated"
+              "canceled",
+              "unknown",
+              "invalid_argument",
+              "deadline_exceeded",
+              "not_found",
+              "already_exists",
+              "permission_denied",
+              "resource_exhausted",
+              "failed_precondition",
+              "aborted",
+              "out_of_range",
+              "unimplemented",
+              "internal",
+              "unavailable",
+              "data_loss",
+              "unauthenticated"
             ],
             "description": "The status code, which should be an enum value of [google.rpc.Code][google.rpc.Code]."
           },
@@ -746,12 +721,8 @@
         "type": "object",
         "properties": {
           "type": {
-            "allOf": [
-              {
-                "$ref": "#/components/schemas/yoshino_s.soar_helper.v1.RunStreamDataType"
-              }
-            ],
-            "title": "type"
+            "title": "type",
+            "$ref": "#/components/schemas/yoshino_s.soar_helper.v1.RunStreamDataType"
           },
           "data": {
             "type": "string",
